--- a/css/index.css
+++ b/css/index.css
@@ -347,75 +347,106 @@ table {
   justify-content: space-between;
   cursor: pointer;
 }
-@media (max-width:800px) {
+@media (max-width: 950px) {
   .body-container .main-mid-wrapper {
     flex-direction: column;
   }
 }
 @media (max-width:500px) {
   .body-container .main-mid-wrapper {
-    flex-direction: column;
+    flex-direction: row;
+    background-color: maroon;
   }
 }
-.body-container .main-mid-wrapper .img-wrapper-1 {
-  display: inline-flex;
-  position: relative;
-}
-.body-container .main-mid-wrapper .img-wrapper-1 #img-1 {
-  width: 80%;
-  border-radius: 0.8em;
-  margin: 0.5em;
-  padding: 0.5em;
-}
-.body-container .main-mid-wrapper .img-wrapper-1 #hidden-p {
-  position: absolute;
-  top: 30%;
+.body-container .main-mid-wrapper .img-wrapper {
   width: 100%;
-  color: white;
-  font-weight: bold;
-  font-size: 1.5em;
-  line-height: 1.2em;
-  text-align: center;
-  opacity: 0.2;
-  visibility: visible;
-  transition: 0.5s;
-}
-.body-container .main-mid-wrapper .img-wrapper-1 #img-1:hover + #hidden-p {
-  opacity: 1;
-  visibility: visible;
-}
-.body-container .main-mid-wrapper .img-wrapper-1 #img-1:hover {
-  opacity: 0.5;
-}
-.body-container .main-mid-wrapper .img-wrapper-3 {
-  display: inline-flex;
+  height: 45vh;
+  display: block;
   position: relative;
+  overflow: hidden;
+  /* Slides the text by shrinking the width of the object from full (100%) to nada (0%) */
 }
-.body-container .main-mid-wrapper .img-wrapper-3 #img-3 {
-  width: 80%;
-  border-radius: 0.8em;
-  margin: 0.5em;
-  padding: 0.5em;
+@media (max-width:500px) {
+  .body-container .main-mid-wrapper .img-wrapper {
+    height: 30vh;
+  }
 }
-.body-container .main-mid-wrapper .img-wrapper-3 #hidden-p3 {
+.body-container .main-mid-wrapper .img-wrapper .main-img-wrapper {
   position: absolute;
-  top: 30%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+}
+.body-container .main-mid-wrapper .img-wrapper .main-img-wrapper img {
+  -webkit-filter: drop-shadow(-4px 5px 5px rgba(0, 0, 0, 0.6));
+  filter: drop-shadow(-4px 5px 5px rgba(0, 0, 0, 0.6));
+  height: 200px;
+  animation: image-slide 4s cubic-bezier(0.5, 0.5, 0, 1);
+  animation-fill-mode: forwards;
+}
+@media (max-width:500px) {
+  .body-container .main-mid-wrapper .img-wrapper .main-img-wrapper img {
+    display: none;
+  }
+}
+.body-container .main-mid-wrapper .img-wrapper .hidden-p {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* Places this below the image container */
+  z-index: 1;
+  margin-left: -100px;
+  color: maroon;
+}
+@media (max-width:500px) {
+  .body-container .main-mid-wrapper .img-wrapper .hidden-p {
+    width: 100%;
+    margin-left: 0;
+    text-align: center;
+    color: white;
+  }
+}
+.body-container .main-mid-wrapper .img-wrapper .hidden-p .fading-effect {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
   width: 100%;
-  color: white;
-  font-weight: bold;
-  font-size: 1.5em;
-  line-height: 1.2em;
-  text-align: center;
-  opacity: 0.2;
-  visibility: visible;
-  transition: 0.5s;
+  background: white;
+  -webkit-animation: text-slide 4s cubic-bezier(0.5, 0.5, 0, 1);
+  animation: text-slide 4s cubic-bezier(0.5, 0.5, 0, 1);
+  animation-fill-mode: forwards;
+  -webkit-animation-fill-mode: forwards;
 }
-.body-container .main-mid-wrapper .img-wrapper-3 #img-3:hover + #hidden-p3 {
-  opacity: 1;
-  visibility: visible;
+@keyframes image-slide {
+  0% {
+    transform: translateX(-250px) scale(0);
+  }
+  60% {
+    transform: translateX(-250px) scale(1);
+  }
+  90% {
+    transform: translateX(150px) scale(1);
+  }
+  100% {
+    transform: translateX(150px) scale(1);
+  }
 }
-.body-container .main-mid-wrapper .img-wrapper-3 #img-3:hover {
-  opacity: 0.5;
+@keyframes text-slide {
+  0% {
+    width: 100%;
+  }
+  60% {
+    width: 100%;
+  }
+  75% {
+    width: 0;
+  }
+  100% {
+    width: 0;
+  }
 }
 .body-container .main-bot-wrapper {
   display: flex;
