--- a/less/index.less
+++ b/less/index.less
@@ -201,88 +201,91 @@
     .main-mid-wrapper {
         .myFlexMixin(center,space-between);
         cursor: pointer;
+        // flex-direction: column;
 
-        @media @tablet {
+        @media (max-width:950px) {
             flex-direction: column;
         }
 
         @media @mobile {
-            flex-direction: column;
+            flex-direction:row;
+            background-color: maroon;
         }
-        .img-wrapper-1  {
-            display: inline-flex;
+        .img-wrapper {
+            width: 100%;
+            height: 45vh;
+            display: block;
             position: relative;
-            #img-1  {
-            width: 80%;
-            border-radius: 0.8em;
-            .myMarginMixin(0.5em,0.5em);
+            overflow: hidden;
+
+            @media @mobile {
+                height: 30vh;
             }
-    
-            #hidden-p {
+
+            .main-img-wrapper {
                 position: absolute;
-                top: 30%;
-                width: 100%;
-                color: white;
-                font-weight: bold;
-                font-size: 1.5em;
-                line-height: 1.2em;
-                text-align: center;
-                opacity: 0.2;
-                visibility: visible;
-                transition: 0.5s;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%,-50%);
+                z-index: 2;
+                img {
+                    -webkit-filter: drop-shadow(-4px 5px 5px rgba(0,0,0,0.6));
+                    filter: drop-shadow(-4px 5px 5px rgba(0,0,0,0.6));
+                    height:200px;
+                    // width:100%;
+                    animation: image-slide 4s cubic-bezier(.5,.5,0,1);
+                    animation-fill-mode: forwards;
+                    
+                    @media @mobile {
+                        display: none;
+                    }
+                }
             }
+            .hidden-p {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%,-50%);
+                /* Places this below the image container */
+                z-index: 1; 
+                margin-left: -100px;
+                color:maroon;
+                @media @mobile {
+                    width:100%;
+                    margin-left:0;
+                    text-align: center;
+                    color:white;
+                }
 
-           #img-1:hover + #hidden-p {
-                opacity: 1;
-                visibility: visible;
-                
+                .fading-effect {
+                    position: absolute;
+                    top: 0;
+                    bottom: 0;
+                    right: 0;
+                    width: 100%;
+                    background: white;
+                    -webkit-animation: text-slide 4s cubic-bezier(.5,.5,0,1);
+                    animation: text-slide 4s cubic-bezier(.5,.5,0,1);
+                    animation-fill-mode: forwards;
+                    -webkit-animation-fill-mode: forwards;
+                }
             }
-
-            #img-1:hover {
-                opacity:0.5 ;
-
-            }
-
-            
+            @keyframes image-slide {
+                0% { transform: translateX(-250px) scale(0); }
+                60% { transform: translateX(-250px) scale(1); }
+                90% { transform: translateX(150px) scale(1); }
+                100% { transform: translateX(150px) scale(1); }  
+              }
+              
+              /* Slides the text by shrinking the width of the object from full (100%) to nada (0%) */
+              @keyframes text-slide {
+                0% { width: 100%; }
+                60% { width: 100%; }
+                75%{ width: 0; }
+                100% { width: 0; }
+              }
         }
-        .img-wrapper-3  { 
-            display:inline-flex;
-            position:relative;
-
-            #img-3  {
-            width:80%;
-            border-radius: 0.8em;
-            .myMarginMixin(0.5em,0.5em);
-            }
-
-            #hidden-p3 {
-                position:absolute;
-                top:30%;
-                width:100%;
-                color: white;
-                font-weight: bold;
-                font-size: 1.5em;
-                line-height: 1.2em;
-                text-align:center;
-                opacity:0.2;
-                visibility: visible;
-                transition: 0.5s;
-            }
-
-            #img-3:hover + #hidden-p3 {
-                opacity: 1;
-                visibility: visible;
-                
-            }
-
-            #img-3:hover {
-                opacity:0.5 ;
-
-            }
-            
-        }
-                        
-        
+                          
     }
 
     .main-bot-wrapper {
@@ -657,7 +660,7 @@
                     text-align: center;
                     font-size: 1em;
                     border-radius: 0.5em;
-                    
+
                     @media @tablet {
                         width:50%;
 
